Fixed problems reminded by Findbugs